--- a/.github/workflows/push-docker-image.yml
+++ b/.github/workflows/push-docker-image.yml
@@ -3,6 +3,7 @@ name: Push to docker hub
 on:
   push:
     branches: [ production ]
+  workflow_dispatch:
 
 jobs:
 
@@ -12,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        ref: 'production'
     
     - name: Set DateTime
       run: echo "CURRENT_DATETIME=$(date +%F_%H-%M-%S)" >> $GITHUB_ENV
