--- a/.github/workflows/docker-hub-push.yml
+++ b/.github/workflows/docker-hub-push.yml
@@ -21,7 +21,7 @@ jobs:
     
     - name: Build the Docker image
       working-directory: ./SimpleApi/SimpleApi
-      run: docker build . --file "SimpleApi/Dockerfile" --tag "simple-api:${CURRENT_DATETIME}" .
+      run: docker build --file "SimpleApi/Dockerfile" --tag "simple-api:${CURRENT_DATETIME}" .
     
     - name: Login to Docker Hub
       env: 
